// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crypto daily {"symbol":"BTC","market":"CNY"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto exchangeRates {"from_currency":"BTC","to_currency":"CNY"} 1`] = `
Object {
  "ask_price": null,
  "bid_price": null,
  "exchange_rate": "Float",
  "from_currency_code": "String",
  "from_currency_name": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_currency_code": "String",
  "to_currency_name": "String",
}
`;

exports[`crypto exchangeRates {"from_currency":"USD","to_currency":"JPY"} 1`] = `
Object {
  "ask_price": "Float",
  "bid_price": "Float",
  "exchange_rate": "Float",
  "from_currency_code": "String",
  "from_currency_name": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_currency_code": "String",
  "to_currency_name": "String",
}
`;

exports[`crypto exchangeTimeSeries {"symbol":"BTC","market":"CNY","interval":"daily","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto exchangeTimeSeries {"symbol":"BTC","market":"CNY","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto exchangeTimeSeries {"symbol":"BTC","market":"CNY","interval":"monthly"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto exchangeTimeSeries {"symbol":"BTC","market":"CNY","interval":"weekly"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto monthly {"symbol":"BTC","market":"CNY"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`crypto weekly {"symbol":"BTC","market":"CNY"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "from_close": "Float",
      "from_high": "Float",
      "from_low": "Float",
      "from_open": "Float",
      "market_cap": "Float",
      "to_close": "Float",
      "to_high": "Float",
      "to_low": "Float",
      "to_open": "Float",
      "volume": "Float",
    },
  ],
  "digital_currency_code": "String",
  "digital_currency_name": "String",
  "information": "String",
  "last_refreshed": "Date",
  "market_code": "String",
  "market_name": "String",
  "time_zone": "String",
}
`;

exports[`data daily {"symbol":"MSFT","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data daily {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data daily_adjusted {"symbol":"MSFT","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data daily_adjusted {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","interval":"5min","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","interval":"5min"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","interval":"monthly"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","interval":"weekly"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries {"symbol":"MSFT","outputsize":"full","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries_adjusted {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries_adjusted {"symbol":"MSFT","interval":"monthly"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries_adjusted {"symbol":"MSFT","interval":"weekly"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data exchangeTimeSeries_adjusted {"symbol":"MSFT","outputsize":"full","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "split_coefficient": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data intraday {"symbol":"MSFT","interval":"5min","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data intraday {"symbol":"MSFT","interval":"5min"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data monthly {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data monthly_adjusted {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data quote {"symbol":"300135.SZ"} 1`] = `
Object {
  "change": "Float",
  "change_percent": "String",
  "close": null,
  "date": "Date",
  "high": "Float",
  "low": "Float",
  "open": "Float",
  "previous_close": "Float",
  "price": "Float",
  "symbol": "String",
  "volume": "Float",
}
`;

exports[`data quote {"symbol":"MSFT"} 1`] = `
Object {
  "change": "Float",
  "change_percent": "String",
  "close": null,
  "date": "Date",
  "high": "Float",
  "low": "Float",
  "open": "Float",
  "previous_close": "Float",
  "price": "Float",
  "symbol": "String",
  "volume": "Float",
}
`;

exports[`data search {"keywords":"BA"} 1`] = `
Array [
  Object {
    "currency": "String",
    "marketclose": "String",
    "marketopen": "String",
    "matchscore": "Float",
    "name": "String",
    "region": "String",
    "symbol": "String",
    "timezone": "String",
    "type": "String",
  },
]
`;

exports[`data search {"keywords":"Micro"} 1`] = `
Array [
  Object {
    "currency": "String",
    "marketclose": "String",
    "marketopen": "String",
    "matchscore": "Float",
    "name": "String",
    "region": "String",
    "symbol": "String",
    "timezone": "String",
    "type": "String",
  },
]
`;

exports[`data search {"keywords":"sony"} 1`] = `
Array [
  Object {
    "currency": "String",
    "marketclose": "String",
    "marketopen": "String",
    "matchscore": "Float",
    "name": "String",
    "region": "String",
    "symbol": "String",
    "timezone": "String",
    "type": "String",
  },
]
`;

exports[`data search {"keywords":"xiaomi"} 1`] = `
Array [
  Object {
    "currency": "String",
    "marketclose": "String",
    "marketopen": "String",
    "matchscore": "Float",
    "name": "String",
    "region": "String",
    "symbol": "String",
    "timezone": "String",
    "type": "String",
  },
]
`;

exports[`data weekly {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`data weekly_adjusted {"symbol":"MSFT"} 1`] = `
Object {
  "data": Array [
    Object {
      "adjusted_close": "Float",
      "close": "Float",
      "date": "Date",
      "dividend_amount": "Float",
      "high": "Float",
      "low": "Float",
      "open": "Float",
      "volume": "Float",
    },
  ],
  "information": "String",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`forex daily {"from_symbol":"EUR","to_symbol":"USD","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex daily {"from_symbol":"EUR","to_symbol":"USD"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeRates {"from_currency":"BTC","to_currency":"CNY"} 1`] = `
Object {
  "ask_price": null,
  "bid_price": null,
  "exchange_rate": "Float",
  "from_currency_code": "String",
  "from_currency_name": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_currency_code": "String",
  "to_currency_name": "String",
}
`;

exports[`forex exchangeRates {"from_currency":"USD","to_currency":"JPY"} 1`] = `
Object {
  "ask_price": "Float",
  "bid_price": "Float",
  "exchange_rate": "Float",
  "from_currency_code": "String",
  "from_currency_name": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_currency_code": "String",
  "to_currency_name": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"5min","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"5min"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"daily","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"monthly"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex exchangeTimeSeries {"from_symbol":"EUR","to_symbol":"USD","interval":"weekly"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex intraday {"from_symbol":"EUR","to_symbol":"USD","interval":"5min","outputsize":"full"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex intraday {"from_symbol":"EUR","to_symbol":"USD","interval":"5min"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex monthly {"from_symbol":"EUR","to_symbol":"USD"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`forex weekly {"from_symbol":"EUR","to_symbol":"USD"} 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`performance sector {} 1`] = `
Object {
  "information": "String",
  "last_refreshed": "String",
  "rank_a_real_time_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_b_day_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_c_day_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_d_month_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_e_month_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_f_year_to_date_ytd_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_g_year_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "real_estate": "String",
    "utilities": "String",
  },
  "rank_h_year_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "utilities": "String",
  },
  "rank_i_year_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "utilities": "String",
  },
  "rank_j_year_performance": Object {
    "communication_services": "String",
    "consumer_discretionary": "String",
    "consumer_staples": "String",
    "energy": "String",
    "financials": "String",
    "health_care": "String",
    "industrials": "String",
    "information_technology": "String",
    "materials": "String",
    "utilities": "String",
  },
}
`;

exports[`technical ad {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical adosc {"symbol":"MSFT","interval":"daily","fastperiod":5} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "slowk_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical adx {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical adxr {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical apo {"symbol":"MSFT","interval":"daily","series_type":"close","fastperiod":10,"matype":1} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical aroon {"symbol":"MSFT","interval":"daily","time_period":14} 1`] = `
Object {
  "data": Array [
    Object {
      "aroon_down": "Float",
      "aroon_up": "Float",
      "date": "Date",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical aroonosc {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical atr {"symbol":"MSFT","interval":"daily","time_period":14} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical bbands {"symbol":"MSFT","interval":"weekly","time_period":5,"series_type":"close","nbdevup":3,"nbdevdn":3} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "real_lower_band": "Float",
      "real_middle_band": "Float",
      "real_upper_band": "Float",
    },
  ],
  "deviation_multiplier_for_lower_band": "Float",
  "deviation_multiplier_for_upper_band": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical bop {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical cci {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical cmo {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical dema {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical dx {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical ema {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical ht_dcperiod {"symbol":"MSFT","interval":"daily","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical ht_dcphase {"symbol":"MSFT","interval":"daily","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical ht_phasor {"symbol":"MSFT","interval":"weekly","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "phase": "Float",
      "quadrature": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical ht_sine {"symbol":"MSFT","interval":"daily","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "lead_sine": "Float",
      "sine": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical ht_trendline {"symbol":"MSFT","interval":"daily","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical ht_trendmode {"symbol":"MSFT","interval":"weekly","series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical kama {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical macd {"symbol":"MSFT","interval":"daily","series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "macd": "Float",
      "macd_hist": "Float",
      "macd_signal": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "signal_period": "Float",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical macdext {"symbol":"MSFT","interval":"daily","series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "macd": "Float",
      "macd_hist": "Float",
      "macd_signal": "Float",
    },
  ],
  "fast_ma_type": "Float",
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "signal_ma_type": "Float",
  "signal_period": "Float",
  "slow_ma_type": "Float",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical mama {"symbol":"MSFT","interval":"daily","series_type":"close","fastlimit":0.02} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fama": "Float",
      "mama": "Float",
    },
  ],
  "fast_limit": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "slow_limit": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical mfi {"symbol":"MSFT","interval":"weekly","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical midpoint {"symbol":"MSFT","interval":"daily","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical midprice {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical minus_di {"symbol":"MSFT","interval":"weekly","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical minus_dm {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical mom {"symbol":"MSFT","interval":"daily","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical natr {"symbol":"MSFT","interval":"weekly","time_period":14} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical obv {"symbol":"MSFT","interval":"weekly"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical plus_di {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical plus_dm {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical ppo {"symbol":"MSFT","interval":"daily","series_type":"close","fastperiod":10,"matype":1} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "fast_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "ma_type": "Float",
  "series_type": "String",
  "slow_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical roc {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical rocr {"symbol":"MSFT","interval":"daily","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical rsi {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical sar {"symbol":"MSFT","interval":"weekly","acceleration":0.05,"maximum":0.25} 1`] = `
Object {
  "acceleration": "Float",
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "maximum": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical sma {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical stoch {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "slowd": "Float",
      "slowk": "Float",
    },
  ],
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "slowd_ma_type": "Float",
  "slowd_period": "Float",
  "slowk_ma_type": "Float",
  "slowk_period": "Float",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical stochf {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fastd": "Float",
      "fastk": "Float",
    },
  ],
  "fastd_ma_type": "Float",
  "fastd_period": "Float",
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical stochrsi {"symbol":"MSFT","interval":"daily","time_period":10,"series_type":"close","fastkperiod":6,"fastdmatype":1} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "fastd": "Float",
      "fastk": "Float",
    },
  ],
  "fastd_ma_type": "Float",
  "fastd_period": "Float",
  "fastk_period": "Float",
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical t3 {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
  "volume_factor_vfactor": "Float",
}
`;

exports[`technical tema {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical trange {"symbol":"MSFT","interval":"daily"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical trima {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical trix {"symbol":"MSFT","interval":"daily","time_period":10,"series_type":"close"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical ultosc {"symbol":"MSFT","interval":"daily","timeperiod":8} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical vwap {"symbol":"MSFT","interval":"15min"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "symbol": "String",
  "time_zone": "String",
}
`;

exports[`technical willr {"symbol":"MSFT","interval":"daily","time_period":10} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;

exports[`technical wma {"symbol":"MSFT","interval":"weekly","time_period":10,"series_type":"open"} 1`] = `
Object {
  "data": Array [
    Object {
      "date": "Date",
      "value": "Float",
    },
  ],
  "indicator": "String",
  "interval": "Interval",
  "last_refreshed": "Date",
  "series_type": "String",
  "symbol": "String",
  "time_period": "Float",
  "time_zone": "String",
}
`;
